/* $Id: changelog,v 1.1456 2001-05-30 01:28:18 phaller Exp $ */

 2001-05-30: Patrick Haller <patrick.haller@innotek.de>
    - KERNEL32: o replaced linear lists in PE loader with faster hashtables
                  (ccollection.cpp, experimental)

 2001-05-29: Sander van Leeuwen <sandervl@xs4all.nl>
    - GDI32:    o Set/GetDIBColorTable fixes for DIB sections with bpp > 8
                o Don't sync DIB section in SelectPalette if bForceBackground
                  is -1. (hack for bitmap buttons in Beyond Compare)
    - DCIMAN32: o Updated & return proper error codes

 2001-05-28: Patrick Haller <patrick.haller@innotek.de>
    - GDI32:    o Split GDI32.CPP into ICM.CPP and GDI32.CPP
    		o CreateDC() accepts "display" instead of "DISPLAY"
                  (fixes font-not-found problem in ZD Bench 99)
    - KERNEL32: o mmap.cpp: slightly accelerated ::findMapByView()
    		o directory.cpp: don't trap in CreateDirectory(NULL, NULL)                
    - DDRAW:    o implemented DirectDrawCreateClipper()
    - WOW32:	o created initial (fake) version of WOW32.DLL
    		  (SBLiveXP accesses this directly)

 2001-05-27: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMCTL32: o Listview: merged old LISTVIEW_EnsureVisible
                  (gets rid of excessive repaints)
    - USER32:   o Replaced TabbedTextOutA/W & GetTabbedTextExtentA/W with
                  Wine version. GPI doesn't support strings > 512 characters.
    - GDI32:    o Commented out InternalTabbedTextOutA/W & InternalGetTabbedTextExtentA/W

 2001-05-26: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMCTL32: o Datetime control resync with Wine (get/setrange added)

 2001-05-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - Odin.ini: o Removed MS Shell Dlg font mapping
    - GDI32:    o Synchronize DIB Section after SelectPalette call (if selected in DC)
                  (fixes wrong colors for some bitmaps)
                o Update bitmap and synchronize DIB Section in SetDIBits